--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -14,15 +14,16 @@
         android:fontFamily="@font/abel_regular"
         android:text="Blog🌿"
         android:textSize="30sp"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewExplore"
         android:layout_width="360dp"
-        android:layout_height="661dp"
+        android:layout_height="748dp"
+        android:layout_marginTop="40dp"
         android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textAboveRecyclerView" />
 
