--- a/app/src/main/res/layout/recycler_item_device.xml
+++ b/app/src/main/res/layout/recycler_item_device.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="67dp"
+    android:layout_height="70dp"
     android:id="@+id/layoutdevice"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
@@ -8,9 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recCardevice"
-        android:layout_margin="3dp"
-       >
+        android:id="@+id/recCardevice">
 
         <LinearLayout
             android:layout_width="match_parent"
