--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fillViewport="true"
+    >
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewExplore"
@@ -13,9 +20,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardElevation="4dp">
         <!-- Icon and Text in Toolbar -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,22 +64,51 @@
                     android:text="Title"
                     android:textSize="30dp"
                     android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/recAuthor"
+        android:fontFamily="@font/abel_regular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Author"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        />
 
-                <TextView
-                    android:id="@+id/recContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:fontFamily="@font/abel_regular"
-                    android:text="Content"
-                    android:textSize="20dp" />
+<!--                <ScrollView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
 
-                <TextView
-                    android:id="@+id/recAuthor"
-                    android:fontFamily="@font/abel_regular"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Author"
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    />
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical"-->
+<!--                        >-->
+                        <TextView
+                            android:id="@+id/recContent"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/abel_regular"
+                            android:text="Content"
+                            android:textSize="20dp" />
+
+<!--                    </LinearLayout>-->
+<!--                </ScrollView>-->
+<!--                <TextView-->
+<!--                    android:id="@+id/recContent"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="300dp"-->
+<!--                    android:fontFamily="@font/abel_regular"-->
+<!--                    android:text="Content"-->
+<!--                    android:textSize="20dp" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/recAuthor"-->
+<!--                    android:fontFamily="@font/abel_regular"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Author"-->
+<!--                    android:textSize="30dp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    />-->
 </LinearLayout>
+</ScrollView>
