--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -22,9 +22,11 @@
         android:layout_width="360dp"
         android:layout_height="748dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textAboveRecyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/textAboveRecyclerView"
+        app:layout_constraintVertical_bias="0.163" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
