--- a/app/src/main/res/layout/recycler_item_device.xml
+++ b/app/src/main/res/layout/recycler_item_device.xml
@@ -113,6 +113,7 @@
                 android:src="@drawable/frame" />
 
             <TextView
+                android:id="@+id/nhietdo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -145,6 +146,7 @@
                 android:src="@drawable/img_2" />
 
             <TextView
+                android:id="@+id/doam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
