--- a/app/src/main/res/layout/recycler_item_device.xml
+++ b/app/src/main/res/layout/recycler_item_device.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="175dp"
     android:id="@+id/layoutdevice"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
@@ -117,15 +117,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/abel_regular"
-                android:text="23°c"
+                android:text="null"
+                android:textColor="#06492C" />
+                        <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/abel_regular"
+                android:text=" °C"
                 android:textColor="#06492C" />
 
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="28dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/tick" />
         </LinearLayout>
@@ -150,15 +156,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/abel_regular"
-                android:text="85%"
+                android:text="null"
+                android:textColor="#06492C" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:fontFamily="@font/abel_regular"
+                android:text=" %"
                 android:textColor="#06492C" />
 
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="32dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/tick" />
         </LinearLayout>
