--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -1,6 +1,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="25dp"
     android:layout_height="match_parent">
 
     <!-- Các thành phần khác trong layout -->
@@ -9,7 +10,13 @@
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nhập nội dung"/>
+        android:hint="Name Room"
+        android:fontFamily="@font/abel_regular"
+        android:background="@drawable/edittext_rounded_background"
+        android:layout_weight="5"
+        android:paddingLeft="22dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" />
 
     <!-- Các thành phần khác trong layout -->
 
