--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,71 +6,105 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#0C9359"
     tools:context=".fragment.FragmentLogin_Logout.ui.FragmentLogin">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="0dp">
+
+        <TextView
+            android:id="@+id/welcome_to_"
+            android:layout_width="411dp"
+            android:layout_height="41dp"
+            android:layout_gravity="start"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="74dp"
+            android:fontFamily="@font/abel_regular"
+            android:gravity="top"
+            android:text="Welcome Back"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/grow_plants"
+            android:layout_width="366dp"
+            android:layout_height="52dp"
+            android:layout_gravity="start"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="5dp"
+            android:textSize="19dp"
+            android:text="Let’s get back to growing your Aepod plants, shall we?"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/abel_regular"
+            android:lineSpacingExtra="3sp" />
+
+        <EditText
+            android:id="@+id/login_email"
+            android:layout_width="359dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="8dp"
+            android:hint="Email"
+            android:padding="8dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="@android:color/white"
+            android:backgroundTint="@android:color/white" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:padding="20dp">
-
-            <Space
-                android:layout_width="375dp"
-                android:layout_height="25dp" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="187dp"
-
-                android:src="@drawable/undraw_forgot_password_re_hxwm">
-
-
-            </ImageView>
-
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:id="@+id/login_email"
-                android:layout_marginTop="30dp"
-                android:padding="8dp"
-                android:hint="Email"
-                android:drawableLeft="@drawable/baseline_email_24"
-                android:drawablePadding="8dp"
-                android:background="@drawable/edittext_bkg"/>
-
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:id="@+id/login_password"
-                android:layout_marginTop="20dp"
-                android:padding="8dp"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:drawableLeft="@drawable/baseline_lock_24"
-                android:drawablePadding="8dp"
-                android:background="@drawable/edittext_bkg"/>
+    <EditText
+        android:id="@+id/login_password"
+        android:layout_width="355dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawablePadding="8dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="8dp"
+        android:textColorHint="@android:color/white"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="@android:color/white" />
 
 
             <Button
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:id="@+id/login_button"
-                android:textSize="18sp"
-                android:text="Login"
-                app:cornerRadius = "30dp"/>
+            android:id="@+id/login_button"
+            android:layout_width="350dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="Login"
+            android:textColor="#0C9359"
+            android:background="@null"
+            android:backgroundTint="#FFFFFF"
+            android:fontFamily="@font/abel_regular"
+            android:textSize="18sp"
+            app:cornerRadius="3dp"
+            android:textAllCaps="false" />
 
-        </LinearLayout>
+       <ImageView
+            android:id="@+id/gestureImageView"
+            android:layout_marginTop="190dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/baseline_swipe_right_24"
+            android:layout_gravity="center"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="41dp"
+
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/abel_regular"
+                android:gravity="top"
+                android:text="If you don't have an account, sign up by swiping right"
+                android:textColor="#FFFFFF"
+                android:textSize="17sp" />
 
     </LinearLayout>
 
