--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,49 +5,45 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
-    >
+    android:fillViewport="true">
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewExplore"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp">
-        <!-- Icon and Text in Toolbar -->
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewExplore"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-            <!-- Icon -->
-            <ImageView
-                android:layout_width="42dp"
-                android:layout_height="24dp"
-                android:contentDescription="Back Icon"
-                android:src="@drawable/img_3" />
+            android:layout_height="40dp"
+            app:cardElevation="4dp">
+            <!-- Icon and Text in Toolbar -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <!-- Icon -->
+                <ImageView
+                    android:layout_width="42dp"
+                    android:layout_height="24dp"
+                    android:contentDescription="Back Icon"
+                    android:src="@drawable/img_3" />
 
-            <!-- Text -->
-            <TextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="@font/abel_regular"
-                android:text="Go Back"
-                android:textColor="#0C9359"
-                android:textSize="17sp" />
+                <!-- Text -->
+                <TextView
+                    android:id="@+id/toolbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/abel_regular"
+                    android:text="Go Back"
+                    android:textColor="#0C9359"
+                    android:textSize="17sp" />
 
-        </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
         <ImageView
             android:id="@+id/recImagePlant"
             android:layout_width="match_parent"
@@ -57,58 +53,29 @@
             android:src="@drawable/cay_1" />
 
         <TextView
-                    android:id="@+id/recTitleExplore"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/abel_regular"
-                    android:text="Title"
-                    android:textSize="30dp"
-                    android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/recAuthor"
-        android:fontFamily="@font/abel_regular"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Author"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        />
+            android:id="@+id/recTitleExplore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abel_regular"
+            android:text="Title"
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
-<!--                <ScrollView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content">-->
+        <TextView
+            android:id="@+id/recAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abel_regular"
+            android:text="Author"
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="vertical"-->
-<!--                        >-->
-                        <TextView
-                            android:id="@+id/recContent"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/abel_regular"
-                            android:text="Content"
-                            android:textSize="20dp" />
-
-<!--                    </LinearLayout>-->
-<!--                </ScrollView>-->
-<!--                <TextView-->
-<!--                    android:id="@+id/recContent"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="300dp"-->
-<!--                    android:fontFamily="@font/abel_regular"-->
-<!--                    android:text="Content"-->
-<!--                    android:textSize="20dp" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/recAuthor"-->
-<!--                    android:fontFamily="@font/abel_regular"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Author"-->
-<!--                    android:textSize="30dp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    />-->
-</LinearLayout>
+        <TextView
+            android:id="@+id/recContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abel_regular"
+            android:text="Content"
+            android:textSize="20dp" />
+    </LinearLayout>
 </ScrollView>
